Reorganicé los archivos.

--- a/src/ejercicio2.ipynb
+++ b/src/ejercicio2.ipynb
@@ -1,42 +1,28 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "El csv que elegí (sample_data/titanic.csv) recopila detalles personales acerca de cada una de las personas que iban a bordo del Titanic, datos de su pasaje y estadía, si sobrevivieron o no y si tenían relación con otros pasajeros."
-      ],
       "metadata": {
         "id": "SnuLYGHpJ0z9"
-      }
+      },
+      "source": [
+        "El csv que elegí (csv/titanic.csv) recopila detalles personales acerca de cada una de las personas que iban a bordo del Titanic, datos de su pasaje y estadía, si sobrevivieron o no y si tenían relación con otros pasajeros."
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 26,
       "metadata": {
-        "id": "i4bzdGsyzlbl",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "i4bzdGsyzlbl",
         "outputId": "4324ee58-60c8-400b-e99d-25725e0d64f6"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "     PassengerId  Survived  Pclass  \\\n",
             "0              1         0       3   \n",
@@ -120,7 +106,7 @@
         "  else:\n",
         "    return valor\n",
         "\n",
-        "csv = pd.read_csv(\"./sample_data/titanic.csv\")\n",
+        "csv = pd.read_csv(\"../csv/titanic.csv\")\n",
         "csvColumnas = list(csv.columns)\n",
         "csv.columns = arreglar_columnas(csvColumnas)\n",
         "\n",
@@ -131,9 +117,23 @@
         "csv[\"Ticket\"] = csv[\"Ticket\"].apply(arreglar_ticket)\n",
         "csv[\"Fare\"] = csv[\"Fare\"].apply(arreglar_tarifa)\n",
         "\n",
-        "csv.to_csv('./sample_data/nuevo.csv')\n",
+        "csv.to_csv('../csv/titanicnuevo.csv')\n",
         "print(csv)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
