Le agregué explicaciones al archivo de los gráficos del Titanic.

--- a/src/graficos-titanic.ipynb
+++ b/src/graficos-titanic.ipynb
@@ -2,11 +2,33 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Análisis de datos: Titanic\n",
+        "\n",
+        "## Integrantes:\n",
+        "\n",
+        "- Casais, Francisco\n",
+        "\n",
+        "## Resumen\n",
+        "\n",
+        "Para este trabajo decidí analizar la composición de pasajeros y diversas características sobre ellos en el accidente del Titanic mediante distintos gráficos. El CSV que utilicé para extraer los datos es [este](../csv/titanicnuevo.csv), que a su vez es una versión limpiada de [este otro archivo](../csv/titanic.csv)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Gráficos"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "j1JFjk-kZlS5"
       },
       "source": [
-        "# Gráfico de puntos: Precio de las tarifas"
+        "### Gráfico de puntos: Precio de las tarifas"
       ]
     },
     {
@@ -60,7 +82,7 @@
         "id": "7i-mJ3q0ZvyZ"
       },
       "source": [
-        "# Gráfico de barras: Población por edad"
+        "### Gráfico de barras: Población por edad"
       ]
     },
     {
@@ -137,7 +159,7 @@
         "id": "nOg1-JqLZ2xZ"
       },
       "source": [
-        "# Gráfico de torta: Víctimas y supervivientes"
+        "### Gráfico de torta: Víctimas y supervivientes"
       ]
     },
     {
@@ -207,7 +229,7 @@
         "id": "oco6-FW9Z-zp"
       },
       "source": [
-        "# Conclusión general"
+        "## Conclusión general"
       ]
     },
     {
