Trabajo de web scrapping terminado.

--- a/src/graficos-titanic.ipynb
+++ b/src/graficos-titanic.ipynb
@@ -58,7 +58,7 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "df = pd.read_csv(\"../csv/titanicnuevo.csv\")\n",
+        "df = pd.read_csv(\"../csv/titanic-nuevo.csv\")\n",
         "df = df.loc[0:890]\n",
         "\n",
         "valoresX = df[\"PassengerId\"]\n",
@@ -112,7 +112,7 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "df = pd.read_csv(\"../csv/titanicnuevo.csv\")\n",
+        "df = pd.read_csv(\"../csv/titanic-nuevo.csv\")\n",
         "df = df.loc[0:890]\n",
         "\n",
         "poblacionPorEdad = {\n",
@@ -189,7 +189,7 @@
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd\n",
         "\n",
-        "df = pd.read_csv(\"../csv/titanicnuevo.csv\")\n",
+        "df = pd.read_csv(\"../csv/titanic-nuevo.csv\")\n",
         "df = df.loc[0:890]\n",
         "\n",
         "def obtenerSupervivientes(valor):\n",
