Trabajo de web scraping terminado.

--- a/src/web-scraping.ipynb
+++ b/src/web-scraping.ipynb
@@ -6,7 +6,7 @@
         "id": "9lG-80me5I9x"
       },
       "source": [
-        "# Web Scrapping\n",
+        "# Web Scraping\n",
         "\n",
         "## Integrantes\n",
         "\n",
